# traiding_agent_final

./: .gitignore  Dockerfile  KAGGLE_SUMMARY.md  KAGGLE_SUMMARY_RU.md  README.md  pyproject.toml  requirements.txt  run_local.bat
app/: agent.py  db.py  fast_api_app.py  tools.py
frontend/: app.js  index.html  style.css
scripts/: git_secret_scanner.py
tests/: conftest.py  test_agent.py  test_auth_and_config.py  test_fast_api_app.py  test_tools.py
