[project]
name = "crypto-advisor"
version = "0.1.0"
description = "Secure educational AI Cryptocurrency Advisor integrated into a premium dashboard."
dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
